--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=0"
+    />
     <title>Vite App</title>
   </head>
   <body>
-    <p>Using data from %VITE_APP_TITLE%</p>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
